# ronto-wasm

./: .gitignore  Cargo.toml  README.md  echo-back.wasm  factorial.wast  fib.wast  fib1.wasm  fib2.wasm  ronto-wasm.wasm  rust-factorial.wast  test-count.wasm  test.wasm
ronto-wasm/: .gitignore  Cargo.toml
ronto-wasm/src/: lib.rs  parser.rs  read_tape.rs  vector.rs
ronto-wasm/src/expression/: definitions.rs  desugar.rs  label_resolution.rs  mod.rs  optimize_instructions.rs  push_ast.rs  typed_instruction_code.rs  untyped_instruction_code.rs
ronto-wasm/src/runtime/: linker.rs  memory_buffer.rs  mod.rs  parameter.rs  store.rs  trap.rs  wasi_snapshot_preview1.rs
src/: backend.rs  bufferedread.rs  error.rs  frontend.rs  instruction.rs  lib.rs  main.rs  parser.rs  read_tape.rs  vector.rs
src/expression/: definitions.rs  desugar.rs  instruction_code.rs  label_resolution.rs  mod.rs  push_ast.rs  stage1_compile.rs  stage2_compile.rs  stage3_compile.rs
src/frontend/: instruction.rs  mod.rs  vector.rs
src/instruction/: instruction_code.rs
src/parser/: mod.rs
src/runtime/: memory_buffer.rs  mod.rs  parameter.rs  store.rs  wasi_snapshot_preview1.rs
test-files/handcoded-tests/: factorial.wast  fib.wast  rot.wast  select_t.wast  test-count.wast  test_double_arguments.wast
test-files/hardcoded-tests/: factorial.wast  tail_call.wast
test-files/test-modules/: decode_image.wasm  encode_base64.wasm  factorial.wasm  fib-rust.wasm  fib.wasm  make_cstr.wasm  rot.wasm  rust-factorial.wasm  select_t.wasm  test_cstr.wasm  test_double_arguments.wasm  to_double_digit.wasm
(+1 files in other folders)
