[package]
name = "ronto-wasm"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 1

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
thiserror = "2.0.11"
paste = "1.0.15"
bytemuck = { version = "1.21.0", features = ["extern_crate_alloc", "min_const_generics", "derive", "must_cast"] }
crossbeam = "0.8.4"