[package]
name = "ronto-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
thiserror = "2.0.12"
paste = "1.0.15"
bytemuck = { version = "1.22.0", features = ["extern_crate_alloc", "min_const_generics", "derive", "must_cast"] }
crossbeam = "0.8.4"

[dev-dependencies]
proptest = "1.6.0"
base64 = "0.22.1"
getrandom = "0.3.1"