[package]
name = "ronto-wasm"
version = "0.1.0"
edition = "2024"

[profile.test]
opt-level = 3
debug = "full"
debug-assertions = true

[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
paste = "1.0.15"
bytemuck = { version = "1.22.0", features = ["extern_crate_alloc", "min_const_generics", "derive", "must_cast"] }
crossbeam = "0.8.4"
getrandom = "0.3.1"
wat = "1.227.1"

[dev-dependencies]
proptest = "1.6.0"
base64 = "0.22.1"
wasm-testsuite = "0.5.0"
image = "0.25.5"